--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
-    "express": "^4.17.3",
     "gh-pages": "^4.0.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
@@ -28,10 +27,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start:dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
