--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gh-pages": "^4.0.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
