--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://aliobba.github.io/reactjs-workshop/",
   "name": "mini-workshop-react-js",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
+    "express": "^4.18.2",
     "gh-pages": "^4.0.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
@@ -27,7 +29,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
